[gd_scene load_steps=23 format=3 uid="uid://q7qbsa7fi7lj"]

[ext_resource type="Script" path="res://MULTILPLECHOICE/MSCRIPTS/MCONTROLLERS/MGAME_CONTROLLER.gd" id="1_blsmx"]
[ext_resource type="Texture2D" uid="uid://c1rgibjnb815c" path="res://MultiplayerScripts/14.png" id="2_dfarq"]
[ext_resource type="Resource" uid="uid://bbkl1c3104ohg" path="res://MULTILPLECHOICE/MSCRIPTS/MRESOURCE/MVARIED/MTHEME/MTHEME_VARIED.tres" id="2_s7g20"]
[ext_resource type="Texture2D" uid="uid://cp185r0f1h3qe" path="res://MULTILPLECHOICE/MUI/landscape (5).png" id="3_b35ft"]
[ext_resource type="Texture2D" uid="uid://clowp872iqadl" path="res://MultiplayerScripts/15.png" id="3_d7k30"]
[ext_resource type="Texture2D" uid="uid://br0xas1xtrxxf" path="res://MultiplayerScripts/16.png" id="4_lfwpo"]
[ext_resource type="Texture2D" uid="uid://cyetkdmwmes45" path="res://MultiplayerScripts/17.png" id="5_6w6mn"]
[ext_resource type="AudioStream" uid="uid://yq4dmn5aipaf" path="res://AUDIO/CORRECT.MP3" id="8_ri1ek"]
[ext_resource type="AudioStream" uid="uid://doy1evnpp8lu5" path="res://AUDIO/WRONG.mp3" id="9_ou58w"]

[sub_resource type="FontVariation" id="FontVariation_ebodp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_25cw7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_21ws6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_stsha"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_chq8q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tb3lr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o5dok"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o0vqi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_024f1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f1ct2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_02dqj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v0bvh"]

[sub_resource type="FontVariation" id="FontVariation_0a400"]

[node name="Node2D" type="Node2D"]

[node name="MULTIPLECHOICE" type="CanvasLayer" parent="."]
script = ExtResource("1_blsmx")
quiz = ExtResource("2_s7g20")
color_right = Color(0, 0.913725, 0, 1)
color_wrong = Color(0.827451, 0, 0, 1)

[node name="Content" type="Control" parent="MULTIPLECHOICE"]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Background" type="TextureRect" parent="MULTIPLECHOICE/Content"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -56.0
offset_top = -3.0
offset_right = 71.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_b35ft")
expand_mode = 1

[node name="PLAYER" type="VBoxContainer" parent="MULTIPLECHOICE/Content"]
layout_mode = 0
offset_left = 109.0
offset_top = 15.0
offset_right = 317.0
offset_bottom = 227.0
theme_override_constants/separation = -7

[node name="TextureRect" type="TextureRect" parent="MULTIPLECHOICE/Content/PLAYER"]
custom_minimum_size = Vector2(0, 43)
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("2_dfarq")
expand_mode = 3
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="MULTIPLECHOICE/Content/PLAYER"]
custom_minimum_size = Vector2(0, 43)
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("3_d7k30")
expand_mode = 3
stretch_mode = 4

[node name="TextureRect3" type="TextureRect" parent="MULTIPLECHOICE/Content/PLAYER"]
custom_minimum_size = Vector2(0, 43)
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("4_lfwpo")
expand_mode = 3
stretch_mode = 4

[node name="TextureRect4" type="TextureRect" parent="MULTIPLECHOICE/Content/PLAYER"]
custom_minimum_size = Vector2(0, 43)
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("5_6w6mn")
expand_mode = 3
stretch_mode = 4

[node name="MQuestionInfo" type="VBoxContainer" parent="MULTIPLECHOICE/Content"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -95.0
offset_top = 90.0
offset_right = 431.0
offset_bottom = 625.0
grow_horizontal = 2

[node name="MQuestionText" type="Label" parent="MULTIPLECHOICE/Content/MQuestionInfo"]
visible = false
layout_mode = 2

[node name="MImageHolder" type="Panel" parent="MULTIPLECHOICE/Content/MQuestionInfo"]
layout_mode = 2

[node name="MQuestionImage" type="TextureRect" parent="MULTIPLECHOICE/Content/MQuestionInfo/MImageHolder"]
custom_minimum_size = Vector2(55, 660)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -370.0
offset_top = -69.0
offset_right = 379.0
offset_bottom = 591.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="MQuestionVideo" type="VideoStreamPlayer" parent="MULTIPLECHOICE/Content/MQuestionInfo/MImageHolder"]
visible = false
layout_mode = 2
offset_top = -31.0
offset_right = 779.0
offset_bottom = -31.0

[node name="MQuestionAudio" type="AudioStreamPlayer" parent="MULTIPLECHOICE/Content/MQuestionInfo/MImageHolder"]

[node name="MQuestionHolder" type="VBoxContainer" parent="MULTIPLECHOICE/Content"]
layout_mode = 0
offset_left = 218.0
offset_top = 200.0
offset_right = 419.0
offset_bottom = 521.0
size_flags_horizontal = 0
theme_override_constants/separation = 23

[node name="Button" type="Button" parent="MULTIPLECHOICE/Content/MQuestionHolder"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_ebodp")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_25cw7")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_21ws6")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_stsha")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_chq8q")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_tb3lr")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_o5dok")
theme_override_styles/hover = SubResource("StyleBoxEmpty_o0vqi")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_024f1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_f1ct2")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_02dqj")
theme_override_styles/normal = SubResource("StyleBoxEmpty_v0bvh")
alignment = 0
autowrap_mode = 2

[node name="Button2" type="Button" parent="MULTIPLECHOICE/Content/MQuestionHolder"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_ebodp")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_25cw7")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_21ws6")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_stsha")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_chq8q")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_tb3lr")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_o5dok")
theme_override_styles/hover = SubResource("StyleBoxEmpty_o0vqi")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_024f1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_f1ct2")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_02dqj")
theme_override_styles/normal = SubResource("StyleBoxEmpty_v0bvh")
alignment = 0
autowrap_mode = 2

[node name="Button3" type="Button" parent="MULTIPLECHOICE/Content/MQuestionHolder"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_ebodp")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_25cw7")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_21ws6")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_stsha")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_chq8q")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_tb3lr")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_o5dok")
theme_override_styles/hover = SubResource("StyleBoxEmpty_o0vqi")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_024f1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_f1ct2")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_02dqj")
theme_override_styles/normal = SubResource("StyleBoxEmpty_v0bvh")
alignment = 0
autowrap_mode = 2

[node name="Button4" type="Button" parent="MULTIPLECHOICE/Content/MQuestionHolder"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_ebodp")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_25cw7")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_21ws6")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_stsha")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_chq8q")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_tb3lr")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_o5dok")
theme_override_styles/hover = SubResource("StyleBoxEmpty_o0vqi")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_024f1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_f1ct2")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_02dqj")
theme_override_styles/normal = SubResource("StyleBoxEmpty_v0bvh")
alignment = 0
autowrap_mode = 2

[node name="MAudioCorrect" type="AudioStreamPlayer" parent="MULTIPLECHOICE"]
stream = ExtResource("8_ri1ek")

[node name="MAudioIncorrect" type="AudioStreamPlayer" parent="MULTIPLECHOICE"]
stream = ExtResource("9_ou58w")

[node name="QuestionTimer" type="Timer" parent="MULTIPLECHOICE"]
wait_time = 10.0
one_shot = true

[node name="QuestionLabel" type="Label" parent="MULTIPLECHOICE/QuestionTimer"]
offset_left = 945.0
offset_top = 15.0
offset_right = 1051.0
offset_bottom = 57.0
scale = Vector2(0.969978, 0.972193)
theme_override_fonts/font = SubResource("FontVariation_0a400")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1

[connection signal="timeout" from="MULTIPLECHOICE/QuestionTimer" to="MULTIPLECHOICE" method="_on_question_timer_timeout"]
